<resources>
    <string name="app_name">简道笔记</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="note_home">我的主页</string>
    <string name="mgr_note">笔记管理</string>
    <string name="change_bg">更换壁纸</string>
    <string name="logout">注销登陆</string>

    <string name="login_username_hint">请输入账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login">登陆</string>
    <string name="register_txt1">还没账号？</string>
    <string name="register_txt2">立即注册</string>
    <string name="login_account">帐号</string>
    <string name="login_pwd">密码</string>
    <string name="register">注册</string>
    <string name="reg_pwd">确认密码</string>
    <string name="reg_pwd_hint">请再次输入密码</string>
    <string name="register_account">注册帐号</string>

    <string name="proudly">Copyright © 2018 简道笔记\nMade with love by Jianhong</string>
    <string name="author">作者：@hjh</string>
    <string name="donate_developer">捐赠作者</string>
    <string name="use_feedback">使用反馈</string>
    <string name="comment">评价应用</string>
    <string name="how_to_use">如何使用</string>
    <string name="slogan">大道至简 记下您此刻的灵感</string>

    <string name="before_minute" formatted="false">%d\u0020分钟\u0020前</string>
    <string name="before_hour" formatted="false">%d\u0020小时\u0020前</string>
    <string name="before_day" formatted="false">%d\u0020天\u0020前</string>
    <string name="before_month" formatted="false">%d\u0020个月\u0020前</string>
    <string name="before_year" formatted="false">%d\u0020年\u0020前</string>
    <string name="just_now">不久之前</string>
    <string name="before_half_hour">半小时前</string>

    <string name="mode_new">新建笔记</string>
    <string name="mode_edit">编辑笔记</string>
    <string name="mode_view">查看笔记</string>
    <string name="write_something">写点什么...</string>

    <string name="word_count">字数统计</string>
    <string name="characters_no_spaces">字符数（不含空格）：</string>
    <string name="characters_with_spaces">字符数：</string>
    <string name="words">字数：</string>
    <string name="menu_undo">撤销</string>
    <string name="menu_redo">重做</string>
    <string name="menu_search">搜索</string>
    <string name="action_share">分享</string>
    <string name="action_move">移动</string>
    <string name="action_trash">删除</string>
    <string name="action_sync">同步</string>
    <string name="action_setting">设置</string>
    <string name="action_about">关于</string>

    <string name="tip1">If winter comes, can spring be far behind?</string>
    <string name="tip2">明德尚行，学贯中西</string>
    <string name="search_note">搜点什么</string>

    <string name="notebook_data">笔记本</string>
    <string name="note_data">笔记信息</string>
    <string name="delete_confirm">确认删除?</string>
    <string name="delete_all_confirm">删除所有选中笔记？</string>
    <string name="delete_select_nothing">未选中任何笔记</string>
    <string name="select_all">选择全部</string>
    <string name="selected_one_count">选择了%1$d个</string>
    <string name="selected_more_count">选择了%1$d个</string>

    <string name="default_notebook">简记</string>
    <string name="folder_cancel">取消</string>
    <string name="folder_delete">删除</string>
    <string name="folder_new">新建</string>

    <!-- create folder dialog -->
    <string name="create_folder_title">新建笔记分组</string>
    <string name="delete_folder_title">删除笔记分组？</string>
    <string name="create_folder">创建</string>
    <string name="create_folder_err">笔记分组创建失败！</string>
    <string name="rename_folder_title">重命名笔记分组</string>
    <string name="rename_folder_err">重命名笔记分组失败！</string>

    <!--setting-->
    <string name="general_settings">常规</string>
    <string name="special_settings">高级</string>

    <string name="one_column_title">单列模式</string>
    <string name="one_column_summary">勾选后，界面由双列瀑布流调整为单列</string>

    <string name="create_order_title">排序依据</string>
    <string name="create_order_summary">勾选前，依据为最后修改时间；勾选后，依据为笔记创建时间</string>

    <string name="lightning_extract">快速摘录</string>
    <string name="lightning_extract_summary">开启后监视剪切板，只需复制即可摘录文字至特定位置</string>
    <string name="lightning_extract_save_location">快速摘录 - 保存位置</string>
    <string name="extract_error">出现错误，未能成功摘录，请重新设置功能！</string>
    <string name="already_extract_to">"文本摘录至 "</string>

    <string name="switch_lightning_extract_on">启动快速摘录</string>
    <string name="switch_lightning_extract_off">关闭快速摘录</string>

    <string name="notification_description">快速摘录 开启中</string>

</resources>
