<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <include layout="@layout/toolbar_shadow_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/category_height"
                android:layout_marginLeft="@dimen/material_margin"
                android:layout_marginRight="@dimen/material_margin"
                android:layout_marginTop="@dimen/category_margin_top"
                android:gravity="center_vertical"
                android:text="@string/general_settings"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/category_text_size"/>

            <com.balysv.materialripple.MaterialRippleLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/material_margin_lower_level"
                android:layout_marginRight="@dimen/material_margin_lower_level"
                app:mrl_rippleOverlay="true">

                <LinearLayout
                    android:id="@+id/ll_one_column"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/material_padding">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/content_margin_right"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/one_column_title"
                            android:textSize="@dimen/title_text_size"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/grid_margin"
                            android:text="@string/one_column_summary"
                            android:textColor="@color/dimgrey"
                            android:textSize="@dimen/category_text_size"/>
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/cb_one_column"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="true"/>
                </LinearLayout>
            </com.balysv.materialripple.MaterialRippleLayout>

            <View
                android:id="@+id/v_universal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_line_height"
                android:layout_marginLeft="@dimen/material_margin_lower_level"
                android:layout_marginRight="@dimen/material_margin_lower_level"
                android:background="@color/divider_line_color"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/category_height"
                android:layout_marginLeft="@dimen/material_margin"
                android:layout_marginRight="@dimen/material_margin"
                android:layout_marginTop="@dimen/category_margin_top"
                android:gravity="center_vertical"
                android:text="@string/special_settings"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/category_text_size"/>

            <com.balysv.materialripple.MaterialRippleLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/material_margin_lower_level"
                android:layout_marginRight="@dimen/material_margin_lower_level"
                app:mrl_rippleOverlay="true">

                <LinearLayout
                    android:id="@+id/ll_lightning_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/material_padding">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/content_margin_right"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lightning_extract"
                            android:textSize="@dimen/title_text_size"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/grid_margin"
                            android:text="@string/lightning_extract_summary"
                            android:textColor="@color/dimgrey"
                            android:textSize="@dimen/category_text_size"/>
                    </LinearLayout>

                    <Switch
                        android:id="@+id/s_lightning_extract"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="true"/>
                </LinearLayout>
            </com.balysv.materialripple.MaterialRippleLayout>

            <include layout="@layout/divider_line"/>

            <com.balysv.materialripple.MaterialRippleLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/material_margin_lower_level"
                android:layout_marginRight="@dimen/material_margin_lower_level"
                app:mrl_rippleOverlay="true">

                <LinearLayout
                    android:id="@+id/ll_extract_location_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/material_padding">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lightning_extract_save_location"
                            android:textSize="@dimen/title_text_size"/>

                        <TextView
                            android:id="@+id/tv_extract_location_summary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/grid_margin"
                            android:text="@string/default_notebook"
                            android:textColor="@color/dimgrey"
                            android:textSize="@dimen/category_text_size"/>
                    </LinearLayout>
                </LinearLayout>
            </com.balysv.materialripple.MaterialRippleLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>